--- a/Test/Test 24.01.html
+++ b/Test/Test 24.01.html
@@ -3,11 +3,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Test</title>
+        <title>Test Git</title>
+
+        <body>Test Git</body>
     </head>
 
-        <body>
-            Ceci est un test Github
-        </body>
 
 </html>
